--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-dist
+# Build artefacts
 *.o
 *.hi
 *.tix
+
+# Cabal (the tool)-related
+dist
+dist-newstyle
+
+# The Haskell Tool Stack-related
 .stack-work
+stack.yaml.lock
