--- a/crypton-socks.cabal
+++ b/crypton-socks.cabal
@@ -22,11 +22,20 @@ build-type:     Simple
 extra-doc-files:
     CHANGELOG.md
     README.md
-    Example.hs
 
 source-repository head
   type: git
   location: https://github.com/mpilgrem/socks5
+
+flag example
+  description: Build the example application.
+  manual: True
+  default: False
+
+flag network-3-0-0-0
+  description: Use network-3.0.0.0 or later. If used the example application has a dependency on network-bsd.
+  manual: False
+  default: True
 
 library
   exposed-modules:
@@ -48,3 +57,23 @@ library
     , cereal >=0.3.1
     , network >=2.6
   default-language: Haskell2010
+
+executable crypton-socks-example
+  main-is: Example.hs
+  hs-source-dirs:
+      example
+  ghc-options: -Wall
+  build-depends:
+      base >=3 && <5
+    , bytestring
+    , crypton-socks
+  default-language: Haskell2010
+  if !flag(example)
+    buildable: False
+  if flag(network-3-0-0-0)
+    build-depends:
+        network >=3.0.0.0
+      , network-bsd
+  else
+    build-depends:
+        network >=2.6
