--- a/crypton-socks.cabal
+++ b/crypton-socks.cabal
@@ -40,7 +40,7 @@ library
       Network.Socks5.Wire
   hs-source-dirs:
       src
-  ghc-options: -Wall -fno-warn-missing-signatures -fwarn-tabs
+  ghc-options: -Wall -Wno-missing-signatures
   build-depends:
       base >=3 && <5
     , basement
